small fix on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ h6 {
   height: 56px;
   width: 100%;
   overflow: hidden;
-;
+  ;
 }
 
 .nav-menu a i,
@@ -301,8 +301,13 @@ h6 {
   right: 0;
 }
 
-#hero .navbar-brand img {
-  display: flex;
+#hero .nav-wrapper .navbar-brand img {
+  width: 250px;
+  height: 50px;
+  position: absolute;
+  top: 30px;
+  display: block;
+  right: -20px;
 }
 
 #hero .navbar-brand img:hover {
@@ -350,7 +355,7 @@ h6 {
 }
 
 .sl-nav {
-  display: block;
+  display: inline-block;
 }
 
 .sl-nav a {
@@ -384,29 +389,6 @@ h6 {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 
-.sl-nav li:hover .triangle {
-  position: absolute;
-  top: 15px;
-  right: -10px;
-  z-index: 10;
-  height: 14px;
-  overflow: hidden;
-  width: 30px;
-  background: transparent;
-}
-
-.sl-nav li:hover .triangle:after {
-  content: '';
-  display: block;
-  z-index: 20;
-  width: 15px;
-  transform: rotate(45deg) translateY(0px) translatex(10px);
-  height: 15px;
-  background: #fff;
-  border-radius: 2px 0px 0px 0px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-}
-
 .sl-nav li ul li {
   position: relative;
   text-align: left;
@@ -435,23 +417,33 @@ h6 {
   #hero h1 {
     font-size: 40px;
     line-height: 36px;
+
+  }
+
+  #hero .navbar-brand {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 20px;
+
   }
 
   #hero .navbar-brand img {
     width: 180px;
     height: 50px;
-    position: absolute;
-    top: 80px;
-    right: 0;
-   }
+  }
 
   #hero .sl-nav {
     position: absolute;
-    top: 140px;
+    top: 20px;
+    display: block;
     right: 0;
-    margin-right: 10px;
     width: 200px;
     height: 100px;
+  }
+
+  #hero .nav-wrapper {
+    margin-right: 25px;
   }
 
   #hero p {
@@ -600,6 +592,7 @@ section {
 .portfolio-details ul {
   list-style: none;
 }
+
 .portfolio-details {
   margin-top: 70px;
 }
@@ -700,4 +693,3 @@ section {
 #footer .credits {
   font-size: 13px;
 }
-
